k8s/rancher/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rancher
  namespace: cattle-system
spec:
  selector:
    app: rancher
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
