k8s/rancher/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: rancher
  namespace: cattle-system
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`<DOMAIN_NAME>`)
      services:
        - name: rancher
          port: 80
  tls:
    secretName: cert-rancher
